Fixed hover on mobile; no repeat operation symbols

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -81,10 +81,10 @@ body{
     padding: 10px;
 }
 
-.button:hover{
-    cursor: pointer;
+.button:active{
     background-color: rgba(255, 255, 255, 0.30);
 }
+
 
 
 @media (min-width: 410px){
@@ -96,5 +96,12 @@ body{
 @media (min-height: 610px){
     body{
         grid-template-rows: 1fr 600px 1fr;
+    }
+}
+
+@media (hover){
+    .button:hover{
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.30);
     }
 }
